--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=eureka-discovery-service
 server.port=9111
-eureka.instance.hostname=localhost
+eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME:localhost}
 eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.server.enable-self-preservation=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
 
 # Spring Security
 #spring.security.user.name=admin
