--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=eureka-discovery-service
 server.port=9111
 eureka.instance.hostname=${EUREKA_INSTANCE_HOSTNAME:localhost}
 eureka.client.register-with-eureka=false
+eureka.instance.preferIpAddress=${EUREKA_INSTANCE_PREFER_IPADDRESS:true}
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
 
 # Spring Security
